Feat: добавить Elements, Fix: изменить адаптив

--- a/index.html
+++ b/index.html
@@ -19,10 +19,54 @@
       <img src="./images/profile-avatar.jpg" class="profile__avatar" alt="Аватар пользователя">
       <div class="profile__info">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
-        <button type="button" class="profile__edit transition"></button>
+        <button type="button" class="profile__edit transition__link"></button>
         <p class="profile__about">Исследователь океана</p>
       </div>
-      <button class="profile__add transition" type="button"></button>
+      <button class="profile__add transition__link" type="button"></button>
+    </section>
+    <section class="elements">
+      <article class="element">
+        <img src="./images/element1.jpg" alt="Москва, Кремль" class="element__image transition__image">
+        <div class="element__container-text">
+          <h2 class="element__title">Москва</h2>
+          <button type="button" class="element__like-button transition__link"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/element2.jpg" alt="Санкт-Петербург улица" class="element__image transition__image">
+        <div class="element__container-text">
+          <h2 class="element__title">Санкт-Петербург</h2>
+          <button type="button" class="element__like-button transition__link"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/element3.jpg" alt="Казань" class="element__image transition__image">
+        <div class="element__container-text">
+          <h2 class="element__title">Казань</h2>
+          <button type="button" class="element__like-button transition__link"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/element4.jpg" alt="Нижний Новгород, метро" class="element__image transition__image">
+        <div class="element__container-text">
+          <h2 class="element__title">Нижний Новгород</h2>
+          <button type="button" class="element__like-button transition__link"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/element5.jpg" alt="Екатеринбург улица" class="element__image transition__image">
+        <div class="element__container-text">
+          <h2 class="element__title">Екатеринбург</h2>
+          <button type="button" class="element__like-button transition__link"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/element6.jpg" alt="Самара" class="element__image transition__image">
+        <div class="element__container-text">
+          <h2 class="element__title">Самара</h2>
+          <button type="button" class="element__like-button transition__link"></button>
+        </div>
+      </article>
     </section>
   </main>
   </div>
