Feat: добавить Footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по местам</title>
 </head>
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
       <img src="./images/header-logo.svg" class="header__logo" alt="Логотип Mesto - Россия">
@@ -69,6 +69,9 @@
       </article>
     </section>
   </main>
+  <footer class="footer">
+    <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
+  </footer>
   </div>
 </body>
 </html>
