--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Место, путешествия, фото, яндекс практикум">
   <meta name="author" content="Тимур Харченко">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Путешествия по местам</title>
+  <title>Mesto</title>
 </head>
 <body class="body">
   <div class="page">
@@ -72,6 +72,24 @@
   <footer class="footer">
     <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
   </footer>
+  <div id="popup" class="popup">
+    <div class="popup__container">
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form">
+        <fieldset class="popup__info">
+          <label class="popup__label">
+            <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input">
+          </label>
+          <label class="popup__label">
+            <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input" class="popup__input">
+          </label>
+          <button type="submit" class="popup__save-button popup__save-button_active transition__button">Сохранить</button>
+        </fieldset>
+        <button type="button" class="popup__close-button transition__link"></button>
+    </form>
+    </div>
   </div>
+  </div>
+  <script defer="defer" src="./script/index.js"></script>
 </body>
 </html>
