--- a/index.html
+++ b/index.html
@@ -75,18 +75,14 @@
   <div id="popup" class="popup">
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form">
+      <form class="popup__form-name">
         <fieldset class="popup__info">
-          <label class="popup__label">
             <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input">
-          </label>
-          <label class="popup__label">
             <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input" class="popup__input">
-          </label>
-          <button type="submit" class="popup__save-button popup__save-button_active">Сохранить</button>
+          <button type="submit" class="popup__save-button">Сохранить</button>
         </fieldset>
-        <button type="button" class="popup__close-button"></button>
     </form>
+    <button type="button" class="popup__close-button"></button>
     </div>
   </div>
   </div>
