Fix: исправить ревью 2

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div id="popup" class="popup">
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form-name">
+      <form name="edit-profile" class="popup__form">
         <fieldset class="popup__info">
             <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input">
             <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input" class="popup__input">
