--- a/index.html
+++ b/index.html
@@ -25,67 +25,47 @@
       <button class="profile__add" type="button"></button>
     </section>
     <section class="elements">
-      <article class="element">
-        <img src="./images/element1.jpg" alt="Москва, Кремль" class="element__image">
-        <div class="element__container-text">
-          <h2 class="element__title">Москва</h2>
-          <button type="button" class="element__like-button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="./images/element2.jpg" alt="Санкт-Петербург улица" class="element__image">
-        <div class="element__container-text">
-          <h2 class="element__title">Санкт-Петербург</h2>
-          <button type="button" class="element__like-button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="./images/element3.jpg" alt="Казань" class="element__image">
-        <div class="element__container-text">
-          <h2 class="element__title">Казань</h2>
-          <button type="button" class="element__like-button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="./images/element4.jpg" alt="Нижний Новгород, метро" class="element__image">
-        <div class="element__container-text">
-          <h2 class="element__title">Нижний Новгород</h2>
-          <button type="button" class="element__like-button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="./images/element5.jpg" alt="Екатеринбург улица" class="element__image">
-        <div class="element__container-text">
-          <h2 class="element__title">Екатеринбург</h2>
-          <button type="button" class="element__like-button"></button>
-        </div>
-      </article>
-      <article class="element">
-        <img src="./images/element6.jpg" alt="Самара" class="element__image">
-        <div class="element__container-text">
-          <h2 class="element__title">Самара</h2>
-          <button type="button" class="element__like-button"></button>
-        </div>
-      </article>
     </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
   </footer>
-  <div id="popup" class="popup">
+  <div id="edit-profile-popup" class="popup">
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <form name="edit-profile" class="popup__form">
         <fieldset class="popup__info">
             <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input">
             <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input" class="popup__input">
-          <button type="submit" class="popup__save-button">Сохранить</button>
+          <button type="submit" id="save-profile" class="popup__save-button">Сохранить</button>
+        </fieldset>
+    </form>
+    <button type="button" class="popup__close-button"></button>
+    </div>
+  </div>
+  <div id="add-card-popup" class="popup">
+    <div class="popup__container">
+      <h2 class="popup__title">Новое место</h2>
+      <form name="add-card" class="popup__form">
+        <fieldset class="popup__info">
+            <input name="place" placeholder="Название" minlength="2" maxlength="40" id="place-input" class="popup__input">
+            <input name="place-url" placeholder="Ссылка на картинку" minlength="2" maxlength="200" id="place-url-input" class="popup__input">
+          <button type="submit" id="save-card" class="popup__save-button">Создать</button>
         </fieldset>
     </form>
     <button type="button" class="popup__close-button"></button>
     </div>
   </div>
   </div>
+  <template id="template-card">
+  <article class="element">
+    <img src="#" alt="изображение карточки" class="element__image">
+    <div class="element__container-text">
+      <h2 class="element__title">Место</h2>
+      <button type="button" class="element__like-button"></button>
+    </div>
+  </article>
+</template>
   <script defer="defer" src="./script/index.js"></script>
 </body>
 </html>
