Feat: добавить click like button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <form name="add-card" class="popup__form">
         <fieldset class="popup__info">
             <input name="place" placeholder="Название" minlength="2" maxlength="40" id="place-input" class="popup__input">
-            <input name="place-url" placeholder="Ссылка на картинку" minlength="2" maxlength="200" id="place-url-input" class="popup__input">
+            <input name="place-url" input type="url" placeholder="Ссылка на картинку" minlength="7" maxlength="200" id="place-url-input" class="popup__input">
           <button type="submit" id="save-card" class="popup__save-button">Создать</button>
         </fieldset>
     </form>
