--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <footer class="footer">
       <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
     </footer>
-    <div id="edit-profile-popup" class="popup">
+    <div class="popup popup__profile-edit">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form name="edit-profile" class="popup__form">
@@ -46,7 +46,7 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </div>
-    <div id="add-card-popup" class="popup">
+    <div class="popup popup__card-add">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <form name="add-card" class="popup__form">
@@ -61,7 +61,7 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </div>
-    <div id="image-popup" class="popup">
+    <div class="popup popup__image-open">
       <div class="popup__container-image">
         <img class="popup__image" src="#" alt="Изображение, на которое вы кликнули">
         <figcaption class="popup__image-caption"></figcaption>
@@ -69,7 +69,7 @@
       </div>
     </div>
   </div>
-  <template id="template-card">
+  <template class="template-card">
     <article class="element">
       <button type="button" class="element__trash-button"></button>
       <img src="#" alt="изображение карточки" class="element__image">
@@ -79,6 +79,7 @@
       </div>
     </article>
   </template>
+  <script defer="defer" src="./script/cards.js"></script>
   <script defer="defer" src="./script/index.js"></script>
 </body>
 
