--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form name="edit-profile" class="popup__form">
           <fieldset class="popup__info">
-            <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input">
+            <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input" required>
+            <span class="popup__input-error name-input-error"></span>
             <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input"
-              class="popup__input">
+              class="popup__input" required>
+              <span class="popup__input-error about-input-error"></span>
             <button type="submit" id="save-profile" class="popup__save-button">Сохранить</button>
           </fieldset>
         </form>
@@ -52,9 +54,11 @@
         <form name="add-card" class="popup__form">
           <fieldset class="popup__info">
             <input name="place" placeholder="Название" minlength="2" maxlength="30" id="place-input"
-              class="popup__input">
+              class="popup__input" required>
+              <span class="popup__input-error place-input-error"></span>
             <input name="place-url" input type="url" placeholder="Ссылка на картинку" id="place-url-input"
-              class="popup__input">
+              class="popup__input" required>
+              <span class="popup__input-error place-url-input-error"></span>
             <button type="submit" id="save-card" class="popup__save-button">Создать</button>
           </fieldset>
         </form>
