--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     <div class="popup popup-profile">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="edit-profile" class="popup__form">
-          <fieldset class="popup__info">
+        <form name="edit-profile" class="popup__form" novalidate>
+          <div class="popup__info">
             <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input" required>
             <span class="popup__input-error name-input-error"></span>
             <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input"
               class="popup__input" required>
               <span class="popup__input-error about-input-error"></span>
-            <button type="submit" id="save-profile" class="popup__save-button">Сохранить</button>
-          </fieldset>
+            <button type="submit" id="save-profile" class="popup__button">Сохранить</button>
+          </div>
         </form>
         <button type="button" class="popup__close-button"></button>
       </div>
@@ -51,21 +51,21 @@
     <div class="popup popup-card">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
-        <form name="add-card" class="popup__form">
-          <fieldset class="popup__info">
+        <form name="add-card" class="popup__form" novalidate>
+          <div class="popup__info">
             <input name="place" placeholder="Название" minlength="2" maxlength="30" id="place-input"
               class="popup__input" required>
               <span class="popup__input-error place-input-error"></span>
             <input name="place-url" input type="url" placeholder="Ссылка на картинку" id="place-url-input"
               class="popup__input" required>
               <span class="popup__input-error place-url-input-error"></span>
-            <button type="submit" id="save-card" class="popup__save-button">Создать</button>
-          </fieldset>
+            <button type="submit" id="save-card" class="popup__button">Создать</button>
+          </div>
         </form>
         <button type="button" class="popup__close-button"></button>
       </div>
     </div>
-    <div class="popup popup-image">
+    <div class="popup popup-image popup__image-background">
       <div class="popup__container-image">
         <img class="popup__image" src="#" alt="Изображение, на которое вы кликнули">
         <figcaption class="popup__image-caption"></figcaption>
