Fix: исправить css БЭМ

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </div>
-    <div class="popup popup-image popup__image-background">
+    <div class="popup popup-image">
       <div class="popup__container-image">
         <img class="popup__image" src="#" alt="Изображение, на которое вы кликнули">
         <figcaption class="popup__image-caption"></figcaption>
