--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       </div>
     </article>
   </template>
-  <script defer="defer" src="./script/cards.js"></script>
-  <script defer="defer" src="./script/validate.js"></script>
-  <script defer="defer" src="./script/index.js"></script>
+  <script defer="defer" src="./script/initialCards.js"></script>
+  <script defer="defer" src="./script/formValidate.js"></script>
+  <script type="module" src="./script/index.js"></script>
 </body>
 
 </html>
