Feat: добавлен класс Section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
     </article>
   </template>
-  <script type="module" src="./script/index.js"></script>
+  <script type="module" src="./pages/index.js"></script>
 </body>
 
 </html>
