--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="popup popup-profile">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="edit-profile" class="popup__form popup__form-edit-profile" novalidate>
+        <form name="edit_profile" class="popup__form popup__form-edit-profile" novalidate>
           <div class="popup__info">
             <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input" required>
             <span class="popup__input-error name-input-error"></span>
