--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,17 @@
   <meta name="description" content="Проектная работа 4 Тимура Харченко">
   <meta name="keywords" content="Место, путешествия, фото, яндекс практикум">
   <meta name="author" content="Тимур Харченко">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
 
 <body class="body">
   <div class="page">
     <header class="header">
-      <img src="./images/header-logo.svg" class="header__logo" alt="Логотип Mesto - Россия">
+      <img src="<%=require('./images/header-logo.svg')%>" class="header__logo" alt="Логотип Mesto - Россия">
     </header>
     <main class="content">
       <section class="profile">
-        <img src="./images/profile-avatar.jpg" class="profile__avatar" alt="Аватар пользователя">
+        <img src="<%=require('./images/profile-avatar.jpg')%>" class="profile__avatar" alt="Аватар пользователя">
         <div class="profile__info">
           <h1 class="profile__name">Киану Ривз</h1>
           <button type="button" class="profile__edit"></button>
