--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,9 @@
             <input name="place" placeholder="Название" minlength="2" maxlength="30" id="place-input"
               class="popup__input" required>
               <span class="popup__input-error place-input-error"></span>
-            <input name="place_url" input type="url" placeholder="Ссылка на картинку" id="place_url-input"
+            <input name="url" input type="url" placeholder="Ссылка на картинку" id="url-input"
               class="popup__input" required>
-              <span class="popup__input-error place_url-input-error"></span>
+              <span class="popup__input-error url-input-error"></span>
             <button type="submit" id="save-card" class="popup__button">Создать</button>
           </div>
         </form>
