пр9 добавить api добавления карточек

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input"
               class="popup__input" required>
               <span class="popup__input-error about-input-error"></span>
-            <button type="submit" id="save-profile" class="popup__button">Сохранить</button>
+            <button type="submit" id="save_profile" class="popup__button">Сохранить</button>
           </div>
         </form>
         <button type="button" class="popup__close-button"></button>
@@ -50,7 +50,7 @@
     <div class="popup popup-card">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
-        <form name="add-card" class="popup__form popup__form-add-card" novalidate>
+        <form name="add_card" class="popup__form popup__form-add-card" novalidate>
           <div class="popup__info">
             <input name="place" placeholder="Название" minlength="2" maxlength="30" id="place-input"
               class="popup__input" required>
@@ -58,7 +58,7 @@
             <input name="url" input type="url" placeholder="Ссылка на картинку" id="url-input"
               class="popup__input" required>
               <span class="popup__input-error url-input-error"></span>
-            <button type="submit" id="save-card" class="popup__button">Создать</button>
+            <button type="submit" id="save_card" class="popup__button">Создать</button>
           </div>
         </form>
         <button type="button" class="popup__close-button"></button>
