--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,12 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form name="edit_profile" class="popup__form popup__form-edit-profile" novalidate>
           <div class="popup__info">
-            <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input" required>
+            <input name="name" placeholder="Имя" minlength="2" maxlength="40" id="name-input" class="popup__input"
+              required>
             <span class="popup__input-error name-input-error"></span>
-            <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input"
-              class="popup__input" required>
-              <span class="popup__input-error about-input-error"></span>
+            <input name="about" placeholder="О себе" minlength="2" maxlength="200" id="about-input" class="popup__input"
+              required>
+            <span class="popup__input-error about-input-error"></span>
             <button type="submit" id="save_profile" class="popup__button">Сохранить</button>
           </div>
         </form>
@@ -54,12 +55,21 @@
           <div class="popup__info">
             <input name="place" placeholder="Название" minlength="2" maxlength="30" id="place-input"
               class="popup__input" required>
-              <span class="popup__input-error place-input-error"></span>
-            <input name="url" input type="url" placeholder="Ссылка на картинку" id="url-input"
-              class="popup__input" required>
-              <span class="popup__input-error url-input-error"></span>
+            <span class="popup__input-error place-input-error"></span>
+            <input name="url" input type="url" placeholder="Ссылка на картинку" id="url-input" class="popup__input"
+              required>
+            <span class="popup__input-error url-input-error"></span>
             <button type="submit" id="save_card" class="popup__button">Создать</button>
           </div>
+        </form>
+        <button type="button" class="popup__close-button"></button>
+      </div>
+    </div>
+    <div class="popup popup__card-delete">
+      <div class="popup__container">
+        <h2 class="popup__title popup__title-delete">Вы уверены?</h2>
+        <form name="delete_card" class="popup__form popup__form-delete-card" novalidate>
+            <button type="submit" id="remove_card" class="popup__button">Да</button>
         </form>
         <button type="button" class="popup__close-button"></button>
       </div>
@@ -78,7 +88,10 @@
       <img src="#" alt="изображение карточки" class="element__image">
       <div class="element__container-text">
         <h2 class="element__title">Место</h2>
-        <button type="button" class="element__like-button"></button>
+        <div class="element__likes">
+          <button type="button" class="element__like-button"></button>
+          <p class="element__like-count"></p>
+        </div>
       </div>
     </article>
   </template>
