--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <main class="content">
       <section class="profile">
         <img src="<%=require('./images/profile-avatar.jpg')%>" class="profile__avatar" alt="Аватар пользователя">
+        <button class="profile__avatar-button"></button>
         <div class="profile__info">
           <h1 class="profile__name">Киану Ривз</h1>
           <button type="button" class="profile__edit"></button>
@@ -29,7 +30,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
+      <p class="footer__copyright">&#169; 2023 Mesto Russia</p>
     </footer>
     <div class="popup popup-profile">
       <div class="popup__container">
@@ -43,6 +44,20 @@
               required>
             <span class="popup__input-error about-input-error"></span>
             <button type="submit" id="save_profile" class="popup__button">Сохранить</button>
+          </div>
+        </form>
+        <button type="button" class="popup__close-button"></button>
+      </div>
+    </div>
+    <div class="popup popup-avatar">
+      <div class="popup__container">
+        <h2 class="popup__title">Обновить аватар</h2>
+        <form name="avatar" class="popup__form popup__form-avatar" novalidate>
+          <div class="popup__info">
+            <input name="url" input type="url" placeholder="Ссылка на картинку" id="url-input" class="popup__input"
+              required>
+            <span class="popup__input-error url-input-error"></span>
+            <button type="submit" id="save_avatar" class="popup__button">Сохранить</button>
           </div>
         </form>
         <button type="button" class="popup__close-button"></button>
