--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
         <h2 class="popup__title">Обновить аватар</h2>
         <form name="avatar" class="popup__form popup__form-avatar" novalidate>
           <div class="popup__info">
-            <input name="url" input type="url" placeholder="Ссылка на картинку" id="url-input" class="popup__input"
+            <input name="avatar_url" input type="url" placeholder="Ссылка на картинку" id="avatar_url-input" class="popup__input"
               required>
-            <span class="popup__input-error url-input-error"></span>
+            <span class="popup__input-error avatar_url-input-error"></span>
             <button type="submit" id="save_avatar" class="popup__button">Сохранить</button>
           </div>
         </form>
