--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
         <h2 class="popup__title">Обновить аватар</h2>
         <form name="avatar" class="popup__form popup__form-avatar" novalidate>
           <div class="popup__info">
-            <input name="avatar_url" input type="url" placeholder="Ссылка на картинку" id="avatar_url-input" class="popup__input"
+            <input name="avatar" input type="url" placeholder="Ссылка на картинку" id="avatar-input" class="popup__input"
               required>
-            <span class="popup__input-error avatar_url-input-error"></span>
+            <span class="popup__input-error avatar-input-error"></span>
             <button type="submit" id="save_avatar" class="popup__button">Сохранить</button>
           </div>
         </form>
@@ -80,7 +80,7 @@
         <button type="button" class="popup__close-button"></button>
       </div>
     </div>
-    <div class="popup popup__card-delete">
+    <div class="popup popup-card-delete">
       <div class="popup__container">
         <h2 class="popup__title popup__title-delete">Вы уверены?</h2>
         <form name="delete_card" class="popup__form popup__form-delete-card" novalidate>
